log/build_2026-03-01_22-43-05/master_ros2_pkg/stdout_stderr.log
-- Found ament_cmake: 2.5.4 (/opt/ros/jazzy/share/ament_cmake/cmake)
-- Found rclcpp: 28.1.13 (/opt/ros/jazzy/share/rclcpp/cmake)
-- Found rosidl_generator_c: 4.6.6 (/opt/ros/jazzy/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.6.6 (/opt/ros/jazzy/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.3.2 (/opt/ros/jazzy/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 8.4.3 (/opt/ros/jazzy/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found std_msgs: 5.3.6 (/opt/ros/jazzy/share/std_msgs/cmake)
-- Found master_ros2_interface: 0.0.0 (/root/master_ros2_ws/install/master_ros2_interface/share/master_ros2_interface/cmake)
-- Found ament_lint_auto: 0.17.3 (/opt/ros/jazzy/share/ament_lint_auto/cmake)
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: 
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done (0.6s)
-- Generating done (0.0s)
-- Build files have been written to: /root/master_ros2_ws/build/master_ros2_pkg
[ 25%] Building CXX object CMakeFiles/subscriber_node.dir/src/subscriber_node.cpp.o
[ 50%] Building CXX object CMakeFiles/publisher_node.dir/src/publisher_node.cpp.o
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:49:2: error: expected ‘;’ after class definition
   49 | }
      |  ^
      |  ;
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp: In constructor ‘PublisherNode::PublisherNode()’:
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:10:73: error: ‘class rclcpp::QoS’ has no member named ‘transient_’; did you mean ‘transient_local’?
   10 |         auto qos_profile = rclcpp::QoS(rclcpp::KeepLast(10)).reliable().transient_ local();
      |                                                                         ^~~~~~~~~~
      |                                                                         transient_local
gmake[2]: *** [CMakeFiles/publisher_node.dir/build.make:76: CMakeFiles/publisher_node.dir/src/publisher_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/publisher_node.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
[ 75%] Linking CXX executable subscriber_node
[ 75%] Built target subscriber_node
gmake: *** [Makefile:146: all] Error 2
